move font-family and font-weight to vars

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <div class="info-container">
       <div class="info">
         <div id="svelte"></div>
-        <span class="cv">CV</span>
+        <span class="cv">.cV</span>
         <div class="icons">
           <i class="icon fab fa-github"></i>
           <i class="icon fab fa-telegram-plane"></i>
