--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,20 @@
     <div class="info-container">
       <div class="info">
         <div id="svelte"></div>
-        <span class="cv">.cV</span>
+        <a href="https://cv.montecamo.dev" target="_blank" class="cv hoverable inverted">.cv</a>
         <div class="icons">
-          <i class="icon fab fa-github"></i>
-          <i class="icon fab fa-telegram-plane"></i>
-          <i class="icon fab fa-linkedin-in"></i>
-          <i class="icon fas fa-envelope"></i>
+          <a href="https://github.com/montecamo" target="_blank" class="hoverable">
+            <i class="icon fab fa-github"></i>
+          </a>
+          <a href="https://t.me/montecamo" target="_blank" class="hoverable">
+            <i class="icon fab fa-telegram-plane"></i>
+          </a>
+          <a href="https://linkedin.com/in/montecamo" target="_blank" class="hoverable">
+            <i class="icon fab fa-linkedin-in"></i>
+          </a>
+          <a href="mailto:merrychristek@gmail.com" target="_blank" class="hoverable">
+            <i class="icon fas fa-envelope"></i>
+          </a>
         </div>
       </div>
     </div>
