--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <div id="svelte"></div>
+    <div id="root"></div>
     <script src="./index.js"></script>
   </body>
 </html>
