--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!-- index.html -->
 <html>
   <head>
+    <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
