fix dark theme flickering

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap"
       rel="stylesheet"
     />
+    <script src="./initialThemeSetter.js"></script>
   </head>
   <body>
     <div id="root"></div>
