--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,13 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="../public/favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap"
       rel="stylesheet"
     />
-    <script src="./initialThemeSetter.js"></script>
+    <script src="./backgroundSetter.js"></script>
   </head>
   <body>
     <div id="root"></div>
