--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
-<!-- index.html -->
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -7,7 +7,9 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <link rel="shortcut icon" href="../public/favicon.ico" />
+    <meta name="description" content="Montecamo personal website" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <title>montecamo</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap"
       rel="stylesheet"
