--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="shortcut icon" href="/favicon.ico" />
     <meta name="description" content="Montecamo personal website" />
     <title>montecamo</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <script defer>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
