--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/index.js"></script>
+    <script type="module" src="./src/index.ts"></script>
   </body>
 </html>
