--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
     <script defer>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
         var f = d.getElementsByTagName(s)[0],
           j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
+          dl = l != 'dataLayer' ? '&l=' + l : '';
         j.defer = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
         f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-5TB393K");
+      })(window, document, 'script', 'dataLayer', 'GTM-5TB393K');
     </script>
     <script>
       const theme =
-        localStorage.getItem("theme") ??
+        localStorage.getItem('theme') ??
         (window.matchMedia &&
-        window.matchMedia("(prefers-color-scheme: dark)").matches
-          ? "dark"
-          : "light");
+        window.matchMedia('(prefers-color-scheme: dark)').matches
+          ? 'dark'
+          : 'light');
       document.documentElement.style.background =
-        theme === "dark" ? "#373a42" : "#fff";
+        theme === 'dark' ? '#373a42' : '#fff';
     </script>
   </head>
   <body>
